# PMS

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  fake_commit_timeline.sh
.github/workflows/: backend.yml  ci.yml
backend/: .env.example  Dockerfile  Procfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20251005_0001_init.py
backend/pms/: config.py  main.py
backend/pms/api/: deps.py
backend/pms/api/v1/: maps.py  proposals.py  recommendations.py  router.py
backend/pms/db/: models.py  session.py
backend/pms/schemas/: approvals.py  common.py  proposals.py  recommendations.py
backend/pms/security/: auth.py  rbac.py
backend/pms/services/: geospatial.py  recommendations.py
backend/tests/: conftest.py  test_proposals.py
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: MapView.tsx  ProposalForm.tsx
gateway/: Dockerfile  default.conf.template  nginx.conf
ops/helm/pups/: Chart.yaml  values.yaml
ops/helm/pups/templates/: deployment-backend.yaml
ops/systemd/: README.md  docker-compose@pups.service
recommender/: Dockerfile  pyproject.toml
recommender/pms_rec/: model.py  train.py
recommender/pms_rec/artifacts/: best_practices_pipeline.pkl
